# webserver

./: .gitignore  Makefile  README.md  config_example.conf  config_example2.conf  default.conf  tester.conf  www_demo.conf
srcs/: main.cpp
srcs/CGI/: CGI.cpp  CGI.hpp
srcs/Cgi/: Cgi.cpp  Cgi.hpp
srcs/Connection/: Connection.cpp  Connection.hpp
srcs/HTTPException/: HTTPException.cpp  HTTPException.hpp
srcs/Location/: Location.cpp  Location.hpp
srcs/Request/: Request.cpp  Request.hpp
srcs/Response/: Response.cpp  Response.hpp
srcs/Server/: Server.cpp  Server.hpp
srcs/Socket/: Socket.cpp  Socket.hpp
srcs/VirtualServer/: VirtualServer.cpp  VirtualServer.hpp
srcs/cgi/: cgi.cpp  cgi.hpp
srcs/http/: delete.cpp  delete.hpp  error_codes.cpp  error_codes.hpp  get.cpp  get.hpp  http.cpp  http.hpp  post.cpp  post.hpp  request_utils.cpp  request_utils.hpp
srcs/parser/: parser.cpp  parser.hpp
tests/: cgi_chunk.py  chunked.py  concurrent_requests.py
unit-tests/: CMakeLists.txt
www-demo/: index.html  params.html  style.css
www-demo/IP/: weirdo.html
www-demo/cgi-bin/: files.py  upload.py  welcome.py
www-demo/error_pages/: 404.html
www-demo/localhost/: index.html  upload.html
www-demo/localhost/cgi-bin/: create.py  files.py
www-demo/localhost/uploads/: test.txt
